Added 3 Icons, Updated ComponentInfo for 2 Icons (#655)
* Update appfilter.xml

* Update appfilter.xml

* Update appfilter.xml

* Update appfilter.xml

* Add files via upload

* Add files via upload

* Update drawable.xml

* Update drawable.xml

* Update drawable.xml

* Update appfilter.xml

* Update appfilter.xml

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -867,6 +867,7 @@
 	<item component="ComponentInfo{com.alibaba.intl.android.apps.poseidon/com.alibaba.intl.android.apps.poseidon.app.activity.ActivityMainMaterial}" drawable="alibaba" />
 	<item component="ComponentInfo{com.alicloud.databox/com.alicloud.databox.launcher.splash.SplashActivity}" drawable="aliyun_drive" />
 	<item component="ComponentInfo{com.Alienforcegames.ChessFusionFree/com.unity3d.player.UnityPlayerActivity}" drawable="chess" />
+	<item component="ComponentInfo{com.alifewithallah.app/com.ryanheise.audioservice.AudioServiceActivity}" drawable="dhikr_and_dua" />
 	<item component="ComponentInfo{com.alightcreative.motion/com.alightcreative.app.motion.activities.main.MainActivity}" drawable="alight_motion" />
 	<item component="ComponentInfo{com.alightcreative.motion/com.alightcreative.app.motion.activities.ProjectListActivity}" drawable="alight_motion" />
 	<item component="ComponentInfo{com.aliucord.installer/com.aliucord.installer.MainActivity}" drawable="aliucord_installer" />
@@ -2495,7 +2496,7 @@
 	<item component="ComponentInfo{com.developer.pythonapp/com.developer.pythonapp.SplashScreenActivity}" drawable="learn_python" />
 	<item component="ComponentInfo{com.developments.samu.muteforspotify/com.developments.samu.muteforspotify.MainActivity}" drawable="spotmute" />
 	<item component="ComponentInfo{com.devexperts.tdmobile.platform.android.thinkorswim/com.devexperts.tdmobile.android.ui.MainActivity}" drawable="thinkorswim" />
-	<item component="ComponentInfo{com.devhd.feedly/com.devhd.feedly.Main}" drawable="feedly" />
+	<item component="ComponentInfo{com.devhd.feedly/com.devhd.feedly.MainActivity}" drawable="feedly" />
 	<item component="ComponentInfo{com.devhomc.myapps/com.devhomc.myapps.MainActivity}" drawable="shortcut_to_my_apps" />
 	<item component="ComponentInfo{com.deviantart.android.damobile/com.deviantart.android.damobile.activity.HomeActivity}" drawable="deviant__art" />
 	<item component="ComponentInfo{com.devolver.downwell/com.devolver.downwell.RunnerActivity}" drawable="downwell" />
@@ -4771,6 +4772,7 @@
 	<item component="ComponentInfo{com.lovense.wear/com.wear.main.FlashActivity}" drawable="lovense_remote" />
 	<item component="ComponentInfo{com.loves.finder/com.loves.lovesconnect.splash_screen.SplashActivity}" drawable="loves_connect" />
 	<item component="ComponentInfo{com.lowes.android/com.lowes.android.controller.util.OnboardingActivity}" drawable="lowes" />
+	<item component="ComponentInfo{com.ls.arabic/com.ls.arabic.MainActivity}" drawable="dua_and_azkar" />
 	<item component="ComponentInfo{com.lsdroid.cerberus.client/com.lsdroid.cerberus.client.StartActivity}" drawable="cerberus" />
 	<item component="ComponentInfo{com.lsdroid.cerberus/com.lsdroid.cerberus.StartActivity}" drawable="cerberus" />
 	<item component="ComponentInfo{com.ltgames.elona/com.ltgames.android.javascript.AppActivity}" drawable="elona_mobile" />
@@ -6404,8 +6406,8 @@
 	<item component="ComponentInfo{com.samsung.android.app.spage/com.samsung.android.app.spage.main.LauncherActivity}" drawable="samsung_free" />
 	<item component="ComponentInfo{com.samsung.android.app.sreminder/com.samsung.android.app.sreminder.phone.cardlist.SReminderActivity}" drawable="samsung_reminder" />
 	<item component="ComponentInfo{com.samsung.android.app.tips/com.samsung.android.app.tips.TipsMainActivity}" drawable="samsung_tips" />
-	<item component="ComponentInfo{com.samsung.android.app.watchmanager/com.samsung.android.app.watchmanager.setupwizard.SetupWizardWelcomeActivity}" drawable="samsung_gear" />
-	<item component="ComponentInfo{com.samsung.android.app.watchmanager2/com.samsung.android.app.watchmanager.setupwizard.SetupWizardWelcomeActivity}" drawable="samsung_wearable" />
+	<item component="ComponentInfo{com.samsung.android.app.watchmanager2/com.samsung.android.app.watchmanager.setupwizard.SetupWizardWelcomeActivity}" drawable="samsung_gear" />
+	<item component="ComponentInfo{com.samsung.android.app.watchmanager/com.samsung.android.app.watchmanager.setupwizard.SetupWizardWelcomeActivity}" drawable="samsung_wearable" />
 	<item component="ComponentInfo{com.samsung.android.ardrawing/com.samsung.android.ardrawing.main.ShortcutActivity}" drawable="samsung_ar_doodle" />
 	<item component="ComponentInfo{com.samsung.android.arzone/com.samsung.android.arzone.ARZoneLauncher}" drawable="samsung_ar_zone" />
 	<item component="ComponentInfo{com.samsung.android.authfw/com.samsung.android.authfw.samsungpass.launcher.EntryLauncher}" drawable="samsung_pass" />
