rename icon: Quacker -> Squawker

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11901,7 +11901,8 @@
 	<item component="ComponentInfo{com.chiller3.rsaf/com.chiller3.rsaf.SettingsActivity}" drawable="rsaf" />
 	<item component="ComponentInfo{alarm.clock.calendar.reminder.pro/home.Activity_List}" drawable="reminder_pro" />
 	<item component="ComponentInfo{com.skyd.raca/com.skyd.raca.ui.activity.MainActivity}" drawable="raca" />
-	<item component="ComponentInfo{com.thehcj.quacker/com.jonjomckay.fritter.MainActivity}" drawable="quacker" />
+	<item component="ComponentInfo{com.thehcj.quacker/com.jonjomckay.fritter.MainActivity}" drawable="squawker" />
+	<item component="ComponentInfo{org.ca.squawkerorg.ca.squawker.MainActivity}" drawable="squawker" />
 	<item component="ComponentInfo{at.paysafecard.android/at.paysafecard.android.LauncherActivity}" drawable="paysafecard" />
 	<item component="ComponentInfo{com.skyd.nightscreen/com.skyd.nightscreen.ui.activity.MainActivity}" drawable="nightscreen" />
 	<item component="ComponentInfo{com.yangdai.calc/com.yangdai.calc.MainActivity}" drawable="multicalculator" />
