--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6538,7 +6538,7 @@
 	<item drawable="qralarm" />
 	<item drawable="qserv" />
 	<item drawable="qt_notes" />
-	<item drawable="quacker" />
+	<item drawable="squawker" />
 	<item drawable="quad9_connect" />
 	<item drawable="quad_touch" />
 	<item drawable="quadline" />
