add missing entries in drawable.xml

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -7812,8 +7812,12 @@
 	<item drawable="tinder_lite" />
 	<item drawable="tinfoil_for_facebook" />
 	<item drawable="ting" />
+	<item drawable="tinkoff" />
+	<item drawable="tinkoff_invest" />
 	<item drawable="tinkoff_invest_course" />
 	<item drawable="tinkoff_journal" />
+	<item drawable="tinkoff_junior" />
+	<item drawable="tinkoff_mobile" />
 	<item drawable="tiny_music_player" />
 	<item drawable="tiny_tiny_rss" />
 	<item drawable="tiny_weather" />
