--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -81,6 +81,7 @@
 	<item drawable="you_tune" />
 	<item drawable="zassest_booker" />
 	<item drawable="zerotier_fix" />
+	<item drawable="aurora_store_nightly" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -2197,6 +2198,7 @@
 	<item drawable="aurora_droid" />
 	<item drawable="aurora_services" />
 	<item drawable="aurora_store" />
+	<item drawable="aurora_store_nightly" />
 	<item drawable="auspost" />
 	<item drawable="autenticacao_gov" />
 	<item drawable="auth0_guardian" />
@@ -6597,6 +6599,7 @@
 	<item drawable="qralarm" />
 	<item drawable="qserv" />
 	<item drawable="qt_notes" />
+	<item drawable="quacker" />
 	<item drawable="quad9_connect" />
 	<item drawable="quad_touch" />
 	<item drawable="quadline" />
