--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -29,6 +29,7 @@
 	<item drawable="easter_eggs" />
 	<item drawable="efood" />
 	<item drawable="geddit" />
+	<item drawable="google_lens" />
 	<item drawable="gvb" />
 	<item drawable="harmony_music" />
 	<item drawable="highway_radar" />
@@ -64,6 +65,7 @@
 	<item drawable="red_cross" />
 	<item drawable="rvmob" />
 	<item drawable="samsung_galaxy_apps" />
+	<item drawable="samsung_health" />
 	<item drawable="song_sync" />
 	<item drawable="soundid" />
 	<item drawable="star_realms" />
@@ -241,6 +243,7 @@
 	<item drawable="google_drive_alt_1" />
 	<item drawable="google_fi_wireless_alt_1" />
 	<item drawable="google_fit_alt_1" />
+	<item drawable="google_lens_alt_1" />
 	<item drawable="google_mail_alt_1" />
 	<item drawable="google_maps_alt_1" />
 	<item drawable="google_meet_alt_1" />
@@ -442,6 +445,7 @@
 	<item drawable="samsung_galaxy_apps_alt_1" />
 	<item drawable="samsung_galaxy_themes_alt_1" />
 	<item drawable="samsung_good_lock_alt_1" />
+	<item drawable="samsung_health_alt_1" />
 	<item drawable="samsung_notes_alt_1" />
 	<item drawable="samsung_pay_alt_1" />
 	<item drawable="samsung_penup_alt_1" />
