remove duplicates, fix icon names

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12098,9 +12098,9 @@
 	<item component="ComponentInfo{app.suhasdissa.memerize/app.suhasdissa.memerize.MainActivity}" drawable="memerize" />
 	<item component="ComponentInfo{com.egyptianbanks.instapay/com.olive.insta_pay.activity.SplashActivity}" drawable="instapay" />
 	<item component="ComponentInfo{com.crypto.multiwallet/com.crypto.multiwallet.MainActivity}" drawable="guarda" />
-	<item component="ComponentInfo{com.flightradar24free/com.flightradar24free.SplashActivity}" drawable="flightradar24" />
-	<item component="ComponentInfo{com.flightradar24free/com.flightradar24free.feature.splash.SplashActivity}" drawable="flightradar24" />
-	<item component="ComponentInfo{com.flightradar24free/com.flightradar24free.feature.splash.view.SplashActivity}" drawable="flightradar24" />
+	<item component="ComponentInfo{com.flightradar24free/com.flightradar24free.SplashActivity}" drawable="flightradar" />
+	<item component="ComponentInfo{com.flightradar24free/com.flightradar24free.feature.splash.SplashActivity}" drawable="flightradar" />
+	<item component="ComponentInfo{com.flightradar24free/com.flightradar24free.feature.splash.view.SplashActivity}" drawable="flightradar" />
 	<item component="ComponentInfo{com.etb.filemanager/com.etb.filemanager.activity.MainActivity}" drawable="filemanagersphere" />
 	<item component="ComponentInfo{com.dustyroom.Empty/com.unity3d.player.UnityPlayerActivity}" drawable="empty" />
 	<item component="ComponentInfo{com.olxmena.horizontal/com.empg.olxeg.MainActivity}" drawable="dubizzle" />
