--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11335,6 +11335,7 @@
 	<item component="ComponentInfo{ru.sberbank.spasibo/ru.handh.spasibo.presentation.SpasiboActivity}" drawable="sber_spasibo" />
 	<item component="ComponentInfo{ru.sberbank_sbbol/ru.sberbank_sbbol.auth.ui.activity.SplashActivity}" drawable="sber_business" />
 	<item component="ComponentInfo{ru.sberbankmobile/ru.sberbankmobile.section.authorization.AuthorizationActivity}" drawable="sber_bank" />
+	<item component="ComponentInfo{ru.sberbankmobile/ru.sberbank.mobile.auth.presentation.splash.SplashActivity}" drawable="sber_bank" />
 	<item component="ComponentInfo{ru.sberbankmobile/ru.sberbankmobile.SplashActivity}" drawable="sber_bank" />
 	<item component="ComponentInfo{ru.serebryakovas.lukoilmobileapp/ru.serebryakovas.lukoilmobileapp.activities.StartUpActivity}" drawable="lukoil" />
 	<item component="ComponentInfo{ru.sportmaster.app/ru.sportmaster.app.presentation.start.StartActivity}" drawable="sportmaster" />
