--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -310,4 +310,9 @@
         contribution="Testing"
         image=""
         link="" />
+    <contributor
+        name="RENOMIZER"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/94466218"
+        link="https://github.com/RENOMIZER" />
 </resources>
