rename 'Capital One UK' to 'Capital One' to use it for both US and UK

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -4516,7 +4516,7 @@
 	<item component="ComponentInfo{com.kongregate.mobile.burritobison3.google/com.unity3d.player.UnityPlayerActivity}" drawable="burrito_bison" />
 	<item component="ComponentInfo{com.kongregate.mobile.pocketplants.google/com.kongregate.mobile.pocketplants.MainActivity}" drawable="pocket_plants" />
 	<item component="ComponentInfo{com.kongregate.mobile.run.google/com.kongregate.mobile.run.google.MainActivity}" drawable="run" />
-	<item component="ComponentInfo{com.konylabs.capitalone/com.konylabs.capitalone.EnterpriseMobileBanking.LaunchActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.konylabs.capitalone/com.konylabs.capitalone.EnterpriseMobileBanking.LaunchActivity}" drawable="capital_one" />
 	<item component="ComponentInfo{com.koo.app/com.koo.onboarding.OnBoardingActivity}" drawable="koo" />
 	<item component="ComponentInfo{com.kosmos.zentrale/com.kosmos.zentrale.HomeActivitySelector}" drawable="diedreifragezeichen" />
 	<item component="ComponentInfo{com.kotobagames.namelesscat/com.unity3d.player.UnityPlayerActivity}" drawable="nameless_cat" />
@@ -11820,7 +11820,7 @@
 	<item component="ComponentInfo{com.bajajmychetak/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="chetak" />
 	<item component="ComponentInfo{com.cuvora.carinfo/com.cuvora.carinfo.splash.SplashScreenActivity}" drawable="carinfo" />
 	<item component="ComponentInfo{com.caribou.caribouapp/com.caribou.caribouapp.MainActivity}" drawable="caribou_coffee" />
-	<item component="ComponentInfo{com.ie.capitalone.uk/capitalone.com.comobileapp.startup.defaultIcon}" drawable="capital_one_uk" />
+	<item component="ComponentInfo{com.ie.capitalone.uk/capitalone.com.comobileapp.startup.defaultIcon}" drawable="capital_one" />
 	<item component="ComponentInfo{com.houseoflife.bitlord/org.proninyaroslav.libretorrent.ui.main.MainActivity}" drawable="bitlord" />
 	<item component="ComponentInfo{com.chiller3.bcr/com.chiller3.bcr.SettingsActivity}" drawable="basic_call_recorder" />
 	<item component="ComponentInfo{ru.avtoto.app/ru.avtoto.app.ui.splash.SplashScreenActivity}" drawable="avtoto" />
