--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -2648,7 +2648,7 @@
 	<item drawable="canva" />
 	<item drawable="canvas" />
 	<item drawable="capcut" />
-	<item drawable="capital_one_uk" />
+	<item drawable="capital_one" />
 	<item drawable="capitec" />
 	<item drawable="capitec_bank" />
 	<item drawable="capod" />
