17 new icons, 4 compinfo, 1 rename

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -3570,7 +3570,7 @@
 	<item drawable="exodus_privacy" />
 	<item drawable="exoplayer" />
 	<item drawable="expedia" />
-	<item drawable="experian_credit" />
+	<item drawable="experian" />
 	<item drawable="exploding_kittens" />
 	<item drawable="expo" />
 	<item drawable="exponential_idle" />
