--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2922,7 +2922,7 @@
 	<item component="ComponentInfo{com.exifthumbnailadder.app/com.exifthumbnailadder.app.MainActivity}" drawable="exif_thumbnail_adder"/>
 	<item component="ComponentInfo{com.exito.appcompania/md5536556d6f8966b38925f12f08ae59039117.SplashActivity}" drawable="exito" />
 	<item component="ComponentInfo{com.expedia.bookings/com.expedia.bookings.activity.SearchActivity}" drawable="expedia" />
-	<item component="ComponentInfo{com.experian.android/com.experian.activities.LandingActivity}" drawable="experian_credit" />
+	<item component="ComponentInfo{com.experian.android/com.experian.activities.LandingActivity}" drawable="experian" />
 	<item component="ComponentInfo{com.explodingkittens.projectbombsquad/com.unity3d.player.UnityPlayerActivity}" drawable="exploding_kittens" />
 	<item component="ComponentInfo{com.explusalpha.Snes9xPlus/com.imagine.BaseActivity}" drawable="snes9x_explus" />
 	<item component="ComponentInfo{com.expressvpn.modyolo/encrypt.vpn.main.ui.view.activity.FirstActivity}" drawable="expressvpn" />
