add icons, 1 compinfo, 1 updated

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -34,6 +34,7 @@
 	<item drawable="wallique" />
 	<item drawable="wayfair" />
 	<item drawable="zalopay" />
+	<item drawable="mj_pdf_reader" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -292,6 +293,7 @@
 	<item drawable="minecraft_alt_1" />
 	<item drawable="minecraft_alt_2" />
 	<item drawable="minerals_guide_plus_identifier_alt_1" />
+	<item drawable="mj_pdf_reader_alt_1" />
 	<item drawable="moelist_alt_1" />
 	<item drawable="moshidon_nightly_alt_1" />
 	<item drawable="mulch_alt_1" />
