--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -33,6 +33,7 @@
 	<item drawable="wallberry" />
 	<item drawable="wallique" />
 	<item drawable="wayfair" />
+	<item drawable="x_twitter" />
 	<item drawable="zalopay" />
 	<item drawable="mj_pdf_reader" />
 
@@ -8604,6 +8605,7 @@
 	<item drawable="x1_card" />
 	<item drawable="x_apm" />
 	<item drawable="x_kom" />
+	<item drawable="x_twitter" />
 	<item drawable="xarena" />
 	<item drawable="xash_three_d_fwgs" />
 	<item drawable="xbox" />
