--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8184,12 +8184,12 @@
 	<item component="ComponentInfo{com.twidere.twiderex/com.twidere.twiderex.TwidereXActivity}" drawable="twidere_x" />
 	<item component="ComponentInfo{com.twitter.android.lite/com.twitter.android.lite.LauncherActivity}" drawable="twitter_lite" />
 	<item component="ComponentInfo{com.twitter.android.lite/com.twitter.android.lite.TwitterLiteActivity}" drawable="twitter_lite" />
-	<item component="ComponentInfo{com.twitter.android/com.example.nm.TwitterLauncherMainActivity}" drawable="twitter" />
-	<item component="ComponentInfo{com.twitter.android/com.twitter.android.LoginActivity}" drawable="twitter" />
-	<item component="ComponentInfo{com.twitter.android/com.twitter.android.StartActivity}" drawable="twitter" />
-	<item component="ComponentInfo{com.twitter.android/com.twitter.android.stub.MainActivity}" drawable="twitter" />
-	<item component="ComponentInfo{com.twitter.android/com.twitter.applib.StartActivity}" drawable="twitter" />
-	<item component="ComponentInfo{com.twitter.androidpath/com.twitter.androidpath.MainActivity}" drawable="twitter" />
+	<item component="ComponentInfo{com.twitter.android/com.example.nm.TwitterLauncherMainActivity}" drawable="x_twitter" />
+	<item component="ComponentInfo{com.twitter.android/com.twitter.android.LoginActivity}" drawable="x_twitter" />
+	<item component="ComponentInfo{com.twitter.android/com.twitter.android.StartActivity}" drawable="x_twitter" />
+	<item component="ComponentInfo{com.twitter.android/com.twitter.android.stub.MainActivity}" drawable="x_twitter" />
+	<item component="ComponentInfo{com.twitter.android/com.twitter.applib.StartActivity}" drawable="x_twitter" />
+	<item component="ComponentInfo{com.twitter.androidpath/com.twitter.androidpath.MainActivity}" drawable="x_twitter" />
 	<item component="ComponentInfo{com.twodboy.worldofgoofull/com.twodboy.worldofgoofull.WorldOfGooFull}" drawable="world_of_goo" />
 	<item component="ComponentInfo{com.twoebgypt.android/com.twobe.twobe.activites.SplashScreenActivity}" drawable="_2b" />
 	<item component="ComponentInfo{com.twofasapp/com.twofasapp.features.start.StartActivity}" drawable="_2fas" />
