update League+ -> Riot Mobile

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -6263,7 +6263,7 @@
 	<item component="ComponentInfo{com.riotgames.league.wildrift/com.tencent.lolm.lgame}" drawable="wild_rift" />
 	<item component="ComponentInfo{com.riotgames.league.wildriftvn/com.tencent.lolm.lgame}" drawable="wild_rift" />
 	<item component="ComponentInfo{com.riotgames.legendsofruneterra/com.riotgames.legendsofruneterra.LoRActivity}" drawable="legends_of_runeterra" />
-	<item component="ComponentInfo{com.riotgames.mobile.leagueconnect/com.riotgames.mobile.leagueconnect.ui.MainActivity}" drawable="league_plus" />
+	<item component="ComponentInfo{com.riotgames.mobile.leagueconnect/com.riotgames.mobile.leagueconnect.ui.MainActivity}" drawable="riot_mobile" />
 	<item component="ComponentInfo{com.riotgames.mobile.leagueconnect/com.riotgames.mobile.leagueconnect.ui.SplashActivity}" drawable="league_plus" />
 	<item component="ComponentInfo{com.riotgames.smg.league.wildrift/com.tencent.lolm.lgame}" drawable="wild_rift" />
 	<item component="ComponentInfo{com.rise_world.epa.ikkClassic.qu/com.rise_world.epa.ui.splash.SplashActivity}" drawable="ikk_classic_epa" />
