--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -36,6 +36,7 @@
 	<item drawable="x_twitter" />
 	<item drawable="zalopay" />
 	<item drawable="mj_pdf_reader" />
+	<item drawable="riot_mobile" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -6804,6 +6805,7 @@
 	<item drawable="ridmik_news" />
 	<item drawable="right_dialer" />
 	<item drawable="ring" />
+	<item drawable="riot_mobile" />
 	<item drawable="ripple" />
 	<item drawable="rippple" />
 	<item drawable="rise_of_kingdoms" />
