--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -11,6 +11,7 @@
 	<item drawable="atlassian_jira" />
 	<item drawable="atlassian_jira_server" />
 	<item drawable="atlassian_opsgenie" />
+	<item drawable="bluesky" />
 	<item drawable="brevent" />
 	<item drawable="buyee" />
 	<item drawable="character_ai" />
@@ -2534,6 +2535,7 @@
 	<item drawable="bluelearn" />
 	<item drawable="blueprint" />
 	<item drawable="blueprints_kustom" />
+	<item drawable="bluesky" />
 	<item drawable="bluetooth_volume_manager" />
 	<item drawable="bluk" />
 	<item drawable="blurone" />
