--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11733,6 +11733,7 @@
 	<item component="ComponentInfo{xyz.aethersx2.android/xyz.aethersx2.android.MainActivity}" drawable="aethersx2" />
 	<item component="ComponentInfo{xyz.aethersx2.custom/xyz.aethersx2.android.MainActivity}" drawable="aethersx2_custom" />
 	<item component="ComponentInfo{xyz.be.customer/xyz.be.customer.SplashNewActivity}" drawable="be" />
+	<item component="ComponentInfo{xyz.blueskyweb.app/xyz.blueskyweb.app.MainActivity}" drawable="bluesky" />
 	<item component="ComponentInfo{xyz.castle/xyz.castle.MainActivity}" drawable="castle" />
 	<item component="ComponentInfo{xyz.classnotes.classnotes/xyz.classnotes.SplashActivity}" drawable="classnotes" />
 	<item component="ComponentInfo{xyz.deepdaikon.quinb/xyz.deepdaikon.quinb.MainActivity}" drawable="quinb" />
