--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12161,7 +12161,7 @@
 	<item component="ComponentInfo{com.sync.mobileapp/com.sync.mobileapp.activities.SplashActivity}" drawable="sync_com" />
 	<item component="ComponentInfo{com.niobiumlabs.android.apps.skroutz/gr.skroutz.ui.startup.StartupActivity}" drawable="skroutz" />
 	<item component="ComponentInfo{com.sbi.upi/com.sbi.upi.customerMode.modules.initial.splash.SplashActivity}" drawable="sbi" />
-	<item component="ComponentInfo{com.samsung.android.keyscafe/com.sasmung.android.keyscafe.main.ui.KeysCafeSplashActivity}" drawable="samsung_keys_cafe" />
+	<item component="ComponentInfo{com.samsung.android.keyscafe/com.samsung.android.keyscafe.main.ui.KeysCafeSplashActivity}" drawable="samsung_keys_cafe" />
 	<item component="ComponentInfo{com.rumble.battles/com.rumble.battles.landing.LandingActivity}" drawable="rumble" />
 	<item component="ComponentInfo{net.primal.android/net.primal.android.MainActivity}" drawable="primal" />
 	<item component="ComponentInfo{nl.tpp.mobile.android/nl.postnl.app.splash.SplashActivity}" drawable="postnl" />
