--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="addy_io" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -12,6 +13,7 @@
 	<item drawable="ac__display_alt_1" />
 	<item drawable="action_launcher_alt_1" />
 	<item drawable="action_launcher_alt_2" />
+	<item drawable="addy_io_alt_1" />
 	<item drawable="adobe" />
 	<item drawable="adobe_analytics_alt_1" />
 	<item drawable="adobe_capture_alt_1" />
@@ -1635,6 +1637,7 @@
 	<item drawable="adblock_fast" />
 	<item drawable="adblock_plus" />
 	<item drawable="add_caster" />
+	<item drawable="addy_io" />
 	<item drawable="adguard" />
 	<item drawable="adguard_home_manager" />
 	<item drawable="adguard_vpn" />
@@ -1938,7 +1941,6 @@
 	<item drawable="anker" />
 	<item drawable="ankidroid" />
 	<item drawable="anlinux" />
-	<item drawable="anonaddy" />
 	<item drawable="another_notes" />
 	<item drawable="another_widget" />
 	<item drawable="anova" />
