add appfilter for com.nexon.bluearchiveone

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -5467,6 +5467,7 @@
 	<item component="ComponentInfo{com.nexdev.blurone/com.nexdev.blurone.MainActivity}" drawable="blurone" />
 	<item component="ComponentInfo{com.nexdev.blurone/com.nexdev.blurone.SplashAct}" drawable="blurone" />
 	<item component="ComponentInfo{com.nexon.bluearchive/com.nexon.bluearchive.MxUnityPlayerActivity}" drawable="blue_archive" />
+	<item component="ComponentInfo{com.nexon.bluearchiveone/com.nexon.bluearchiveone.MxUnityPlayerActivity}" drawable="blue_archive" />
 	<item component="ComponentInfo{com.nexon.fwar/com.nexon.fwar.Project30GameActivity}" drawable="fantasy_war" />
 	<item component="ComponentInfo{com.nexon.konosuba/com.nexon.konosuba.MainActivity}" drawable="konosuba" />
 	<item component="ComponentInfo{com.nexowallet/com.nexowallet.MainActivity}" drawable="nexo" />
