add icons for termux.x11

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -7808,6 +7808,7 @@
 	<item drawable="teo" />
 	<item drawable="terabox" />
 	<item drawable="termius" />
+	<item drawable="termux_x11" />
 	<item drawable="terra_cloud_wortmann" />
 	<item drawable="terraria" />
 	<item drawable="territorial_io" />
