--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -7830,6 +7830,7 @@
 	<item component="ComponentInfo{com.termux.tasker/com.termux.tasker.activities.TermuxTaskerActivity}" drawable="terminal" />
 	<item component="ComponentInfo{com.termux.window/com.termux.window.TermuxFloatActivity}" drawable="terminal" />
 	<item component="ComponentInfo{com.termux/com.termux.app.TermuxActivity}" drawable="terminal" />
+	<item component="ComponentInfo{com.termux.x11/com.termux.x11.MainActivity}" drawable="termux_x11" />
 	<item component="ComponentInfo{com.terribletoybox.thimbleweedparkandroid/com.terribletoybox.thimbleweedparkandroid.ThimbleweedPark}" drawable="thimbleweed_park" />
 	<item component="ComponentInfo{com.tesco.clubcardmobile/com.tesco.clubcardmobile.activity.SplashScreenActivity}" drawable="tesco" />
 	<item component="ComponentInfo{com.teslacoilsw.launcher.prime/android.app.AppDetailsActivity}" drawable="nova_launcher_prime" />
