--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -7,6 +7,7 @@
 	<item drawable="addy_io" />
 	<item drawable="anilist" />
 	<item drawable="cryptee" />
+	<item drawable="termux_x11" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
