--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -7,6 +7,7 @@
 	<item drawable="addy_io" />
 	<item drawable="anilist" />
 	<item drawable="cryptee" />
+	<item drawable="edem_rf" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -128,6 +129,7 @@
 	<item drawable="duckduckgo_silhouette" />
 	<item drawable="ecosia_alt_1" />
 	<item drawable="edem_rf_alt_1" />
+	<item drawable="edem_rf_alt_2" />
 	<item drawable="elements_kwgt_alt_1" />
 	<item drawable="exodus_alt_1" />
 	<item drawable="fancade_alt_1" />
