add appfilter for com.nexon.bluearchiveone(Blue Archive KR One Store version)&termux:widget, add icon for termux:X11 (#675)
* add appfilter for com.nexon.bluearchiveone

* add icons for termux.x11

* add appfilter for termux:widget

* move Termux X11 vector icon and duplicate the drawable name to 'New' cat

---------

Co-authored-by: flameshikari <mail@hexed.pw>

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -5467,6 +5467,7 @@
 	<item component="ComponentInfo{com.nexdev.blurone/com.nexdev.blurone.MainActivity}" drawable="blurone" />
 	<item component="ComponentInfo{com.nexdev.blurone/com.nexdev.blurone.SplashAct}" drawable="blurone" />
 	<item component="ComponentInfo{com.nexon.bluearchive/com.nexon.bluearchive.MxUnityPlayerActivity}" drawable="blue_archive" />
+	<item component="ComponentInfo{com.nexon.bluearchiveone/com.nexon.bluearchiveone.MxUnityPlayerActivity}" drawable="blue_archive" />
 	<item component="ComponentInfo{com.nexon.fwar/com.nexon.fwar.Project30GameActivity}" drawable="fantasy_war" />
 	<item component="ComponentInfo{com.nexon.konosuba/com.nexon.konosuba.MainActivity}" drawable="konosuba" />
 	<item component="ComponentInfo{com.nexowallet/com.nexowallet.MainActivity}" drawable="nexo" />
@@ -7829,6 +7830,8 @@
 	<item component="ComponentInfo{com.termux.tasker/com.termux.tasker.activities.TermuxTaskerActivity}" drawable="terminal" />
 	<item component="ComponentInfo{com.termux.window/com.termux.window.TermuxFloatActivity}" drawable="terminal" />
 	<item component="ComponentInfo{com.termux/com.termux.app.TermuxActivity}" drawable="terminal" />
+	<item component="ComponentInfo{com.termux.widget/com.termux.widget.activities.TermuxWidgetActivity}" drawable="terminal" />
+	<item component="ComponentInfo{com.termux.x11/com.termux.x11.MainActivity}" drawable="termux_x11" />
 	<item component="ComponentInfo{com.terribletoybox.thimbleweedparkandroid/com.terribletoybox.thimbleweedparkandroid.ThimbleweedPark}" drawable="thimbleweed_park" />
 	<item component="ComponentInfo{com.tesco.clubcardmobile/com.tesco.clubcardmobile.activity.SplashScreenActivity}" drawable="tesco" />
 	<item component="ComponentInfo{com.teslacoilsw.launcher.prime/android.app.AppDetailsActivity}" drawable="nova_launcher_prime" />
