--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -7,6 +7,7 @@
 	<item drawable="addy_io" />
 	<item drawable="anilist" />
 	<item drawable="cryptee" />
+	<item drawable="termux_x11" />
 	<item drawable="edem_rf" />
 
 	<category title="Alts" />
@@ -7810,6 +7811,7 @@
 	<item drawable="teo" />
 	<item drawable="terabox" />
 	<item drawable="termius" />
+	<item drawable="termux_x11" />
 	<item drawable="terra_cloud_wortmann" />
 	<item drawable="terraria" />
 	<item drawable="territorial_io" />
