add sync variants

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12289,4 +12289,7 @@
 	<item component="ComponentInfo{akhil.alltrans/akhil.alltrans.MainActivity}" drawable="alltrans" />
 	<item component="ComponentInfo{com.accor.appli.hybrid/com.accor.app.splashscreen.view.SplashScreenActivity}" drawable="accor_all" />
 	<item component="ComponentInfo{me.linshen.abattery/me.linshen.abattery.MainActivity}" drawable="abattery" />
+	<item component="ComponentInfo{com.laurencedawson.reddit_sync/com.laurencedawson.reddit_sync.ui.activities.HomeActivity.DefaultDark}" drawable="sync_dark" />
+	<item component="ComponentInfo{com.laurencedawson.reddit_sync/com.laurencedawson.reddit_sync.ui.activities.HomeActivity.Fancy}" drawable="sync_fancy" />
+	<item component="ComponentInfo{com.laurencedawson.reddit_sync/com.laurencedawson.reddit_sync.ui.activities.HomeActivity.Blm}" drawable="sync_blm" />
 </resources>
