--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -51,6 +51,10 @@
 	<item drawable="wikicamps_uk" />
 	<item drawable="wikicamps_usa" />
 	<item drawable="wordup" />
+	<item drawable="sync" />
+	<item drawable="sync_dark" />
+	<item drawable="sync_pride" />
+	<item drawable="sync_blm" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -796,8 +800,12 @@
 	<item drawable="swift_backup_alt_1" />
 	<item drawable="symphony_player_alt_1" />
 	<item drawable="sync_alt_1" />
+	<item drawable="sync_alt_2" />
+	<item drawable="sync_blm" />
+	<item drawable="sync_dark" />
 	<item drawable="sync_fancy" />
 	<item drawable="sync_legacy" />
+	<item drawable="sync_pride" />
 	<item drawable="t_mobile_visual_voicemail_alt_1" />
 	<item drawable="t_phone_alt_1" />
 	<item drawable="tachiyomi_alt_1" />
