--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -55,6 +55,7 @@
 	<item drawable="sync_dark" />
 	<item drawable="sync_pride" />
 	<item drawable="sync_blm" />
+	<item drawable="basic_call_recorder" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -106,6 +107,7 @@
 	<item drawable="aves_gallery_alt_1" />
 	<item drawable="badoo_alt_1" />
 	<item drawable="bang_dream_alt_1" />
+	<item drawable="basic_call_recorder_alt_1" />
 	<item drawable="bilibili_alt_1" />
 	<item drawable="binance_alt_1" />
 	<item drawable="binary_eye_alt_1" />
