--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -123,6 +123,7 @@
 	<item drawable="yalla" />
 	<item drawable="you_com" />
 	<item drawable="zus_coffee" />
+	<item drawable="breezy_weather" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -183,6 +184,7 @@
 	<item drawable="bixby_alt_1" />
 	<item drawable="booking_com_alt_1" />
 	<item drawable="bouncer_alt_1" />
+	<item drawable="breezy_weather_alt_1" />
 	<item drawable="bromite_alt_1" />
 	<item drawable="browser_alt_1" />
 	<item drawable="browser_alt_2" />
