--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -124,6 +124,7 @@
 	<item drawable="you_com" />
 	<item drawable="zus_coffee" />
 	<item drawable="breezy_weather" />
+	<item drawable="table_habit" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -880,6 +881,7 @@
 	<item drawable="sync_pride" />
 	<item drawable="t_mobile_visual_voicemail_alt_1" />
 	<item drawable="t_phone_alt_1" />
+	<item drawable="table_habit_alt_1" />
 	<item drawable="tachiyomi_alt_1" />
 	<item drawable="tachiyomi_j2k_alt_1" />
 	<item drawable="takeaway_alt_1" />
