update Ebay Kleinanzeigen icon

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -125,6 +125,7 @@
 	<item drawable="zus_coffee" />
 	<item drawable="breezy_weather" />
 	<item drawable="table_habit" />
+	<item drawable="ebay_kleinanzeigen" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -246,6 +247,7 @@
 	<item drawable="duckduckgo_green" />
 	<item drawable="duckduckgo_purple" />
 	<item drawable="duckduckgo_silhouette" />
+	<item drawable="ebay_kleinanzeigen_alt_1" />
 	<item drawable="ecosia_alt_1" />
 	<item drawable="edem_rf_alt_1" />
 	<item drawable="edem_rf_alt_2" />
